# rainbow_fatcat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
rainbow_fatcat/: app.py  config.py
rainbow_fatcat/entities/: __init__.py  weather_forecast.py
rainbow_fatcat/locale/: base.pot
rainbow_fatcat/locale/en/LC_MESSAGES/: messages.po
rainbow_fatcat/locale/ja/LC_MESSAGES/: messages.po
rainbow_fatcat/locale/zh/LC_MESSAGES/: messages.po
rainbow_fatcat/use_cases/: embeds.py  ensure_eorzeaenv.py  interaction.py  interaction_message.py  translators.py  weather_report.py
